Added two player names in each sports

--- a/index.html
+++ b/index.html
@@ -13,10 +13,30 @@
     <div class="fav-sports">
     <ul class="list">
         <li>Soccer</li>
+        <ol>
+            <li>Ronaldo</li>
+            <li>Messi</li>
+        </ol>
         <li>Cricket</li>
+        <ol>
+            <li>MS Dhoni</li>
+            <li>Dale steyn</li>
+        </ol>
         <li>Volley Ball</li>
+        <ol>
+            <li>Akhin Gs</li>
+            <li>Karthik Madhu</li>
+        </ol>
         <li>Basket Ball</li>
-        <li>Badminton</li>
+        <ol>
+            <li>Lebron James</li>
+            <li>MIcheal Jordan</li>
+        </ol>
+        <li>Tennis</li>
+        <ol>
+            <li>Sania Mirza</li>
+            <li>Leander Paes</li>
+        </ol>
     </ul>
 </div>
 </body>
