Added achivements of all players

--- a/index.html
+++ b/index.html
@@ -6,36 +6,88 @@
         .list{
             list-style:circle;
         }
+        .sport{
+            text-decoration: underline;
+            font-size: 25px;
+            font-family: 'Times New Roman', Times, serif;
+        }
+        .name{
+            font-size: 20px;
+            font-family: 'Times New Roman', Times, serif;
+        }
+        dt{
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <h2 class="heading">Favourite Sports</h2>
     <div class="fav-sports">
     <ul class="list">
-        <li>Soccer</li>
+        <li class="sport">Soccer</li>
         <ol>
-            <li>Ronaldo</li>
-            <li>Messi</li>
+            <li class="name">Ronaldo</li>
+            <dl>
+                <dt>Achievement:</dt>
+                <dd>10X FOOTBALLER OF THE YEAR</dd>
+            </dl>
+            <li class="name">Messi</li>
+            <dl>
+                <dt>Achievement:</dt>
+                <dd>22X TOP SCORER</dd>
+            </dl>
         </ol>
-        <li>Cricket</li>
+        <li class="sport">Cricket</li>
         <ol>
-            <li>MS Dhoni</li>
-            <li>Dale steyn</li>
+            <li class="name">MS Dhoni</li>
+            <dl>
+                <dt>Achievement:</dt>
+                <dd>1st-Most matches as a captain</dd>
+            </dl>
+            <li class="name">Dale steyn</li>
+            <dl>
+                <dt>Achievement:</dt>
+                <dd>3rd-Fastest to 400 wickets in 80 test matches</dd>
+            </dl>
         </ol>
-        <li>Volley Ball</li>
+        <li class="sport">Volley Ball</li>
         <ol>
-            <li>Akhin Gs</li>
-            <li>Karthik Madhu</li>
+            <li class="name">Akhin Gs</li>
+            <dl>
+                <dt>Achievement:</dt>
+                <dd>played in the 2015 Asian Championship and in the 2018 Asian Games.</dd>
+            </dl>
+            <li class="name">Jimmy George</li>
+            <dl>
+                <dt>Achievement:</dt>
+                <dd>bronze medal in an Asian championship</dd>
+            </dl>
         </ol>
-        <li>Basket Ball</li>
+        <li class="sport">Basket Ball</li>
         <ol>
-            <li>Lebron James</li>
-            <li>MIcheal Jordan</li>
+            <li class="name">Lebron James</li>
+            <dl>
+                <dt>Achievement:</dt>
+                <dd>NAACP Image Award – President's Award-2021</dd>
+            </dl>
+            <li class="name">Micheal Jordan</li>
+            <dl>
+                <dt>Achievement:</dt>
+                <dd>5× NBA Most Valuable Player</dd>
+            </dl>
         </ol>
-        <li>Tennis</li>
+        <li class="sport">Tennis</li>
         <ol>
-            <li>Sania Mirza</li>
-            <li>Leander Paes</li>
+            <li class="name">Sania Mirza</li>
+            <dl>
+                <dt>Achievement:</dt>
+                <dd>Padma Bhusan-2016</dd>
+            </dl>
+            <li class="name">Leander Paes</li>
+            <dl>
+                <dt>Achievement:</dt>
+                <dd>Seven Olympic appearances</dd>
+            </dl>
         </ol>
     </ul>
 </div>
